--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,8 @@ body {
   min-height: 100vh;
   text-align: center;
   overflow-x: hidden;
+  background: linear-gradient(rgba(0, 0, 0, 0.88), rgba(255, 217, 0, 0.627)),
+    url(../images/background.webp) center/cover no-repeat;
 }
 
 h1,
@@ -46,16 +48,20 @@ p {
 }
 
 .game-container {
+  border: solid 1px red;
   display: flexbox;
   justify-content: center;
-  background: linear-gradient(rgba(0, 0, 0, 0.88), rgba(255, 217, 0, 0.627)),
-    url(../images/background.webp) center/cover no-repeat;
   background-attachment: fixed;
   width: 80%;
   max-width: 1200px;
   margin: auto;
-  height: 80vh;
+  height: auto;
   padding: 2em;
+  background-color: rgba(0, 0, 0, 0.54);
+}
+
+.game-container h1 {
+  margin-top: 1vh;
 }
 
 .start-container {
