--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,12 @@
   /* Font Family Variables */
   --ff-primary: Roboto Slab, sans-serif;
   --ff-secondary: Montserrat, sans-serif;
+  /* Commonly used CSS properties for consistency */
+  --transition: all 0.3s linear;
+  --spacing: 0.25rem;
+  --radius: 0.5rem;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --max-width: 1170px;
 }
 
 body {
@@ -48,14 +54,15 @@ p {
 }
 
 .game-container {
-  border: solid 1px red;
+  /*border: solid 1px red;*/
   display: flexbox;
   justify-content: center;
   background-attachment: fixed;
-  width: 80%;
+  width: 95%;
   max-width: 1200px;
   margin: auto;
-  height: auto;
+  height: 90vh;
+  max-width: 100vh;
   padding: 2em;
   background-color: rgba(0, 0, 0, 0.54);
 }
@@ -65,12 +72,12 @@ p {
 }
 
 .start-container {
-  border: solid 2px blue;
+  /*border: solid 2px blue;*/
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 60vh;
-  padding: 1em;
+  justify-content: space-between;
+  height: 65vh;
   margin-top: 5vh;
 }
 
@@ -83,11 +90,55 @@ p {
   max-width: 90%;
   margin: 0;
   font-size: small;
+  flex-grow: 1; /* This will make the paragraph take up any available space */
+  margin-bottom: 20px; /* Provide some space above the button */
 }
 
 .start-container button {
   margin-top: 3vh;
-  padding: 0.5em 1em;
+  padding: 0.5em 0.5em;
   font-size: 1rem;
   cursor: pointer;
+}
+
+/* Button styling with hover effect */
+.btn {
+  text-transform: uppercase;
+  color: var(--clr-secondary-2);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid var(--clr-secondary-2);
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: var(--radius);
+  margin: 0 5vh;
+}
+.btn:hover {
+  color: var(--clr-secondary-1);
+  background: transparent;
+  scale: 1.5;
+}
+
+.btn-green {
+  text-transform: uppercase;
+  color: var(--clr-white);
+  background: var(--clr-primary-2);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid var(--clr-primary-2);
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: var(--radius);
+  margin: 0 5vh;
+}
+
+.btn-green:hover {
+  color: var(--clr-secondary-1);
+  scale: 1.5;
 }
