--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,7 @@ p {
   text-transform: uppercase;
   color: var(--clr-secondary-2);
   padding: 0.375rem 0.75rem;
+  width: 10vh;
   letter-spacing: var(--spacing);
   display: inline-block;
   transition: var(--transition);
