--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,100 +24,129 @@
   --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-body {
-  margin: 0;
+* {
   padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
   font-family: var(--ff-secondary);
-  background-color: var(--clr-grey-1);
-  color: var(--clr-black);
-  min-height: 100vh;
-  text-align: center;
-  overflow-x: hidden;
+  border: none;
+}
+
+html,
+body {
+  height: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.88), rgba(255, 217, 0, 0.627)),
     url(../images/background.webp) center/cover no-repeat;
-  background-attachment: fixed;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--clr-secondary-2);
 }
 
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h2 {
   color: var(--clr-secondary-2);
   font-family: var(--ff-primary);
-  font-size: 4vh;
+  text-align: center;
+  text-transform: uppercase;
 }
-
+h1 {
+  font-size: 2em;
+}
+h2 {
+  color: var(--clr-secondary-1);
+  font-size: 1.5rem;
+}
 p {
+  font-size: 0.9rem;
   color: var(--clr-white);
 }
-
-.game-container {
-  border: solid 1px red;
-  display: flexbox;
-  justify-content: center;
-  background-attachment: fixed;
-  width: 95%;
-  max-width: 1200px;
-  margin: auto;
-  height: 90vh;
-  max-width: 100vh;
-  /*background-color: rgba(0, 0, 0, 0.54);*/
+.welcome-container {
+  display: grid;
+  grid-template-columns: repeat(3, 80px);
+  grid-template-rows: 30px 250px 30px 50px;
+  gap: 5px;
 }
 
-.game-container h1 {
-  margin-top: 1vh;
+@media (min-width: 768px) {
+  .welcome-container {
+    width: 490px;
+    display: grid;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 100px 300px 30px 50px;
+    gap: 15px;
+  }
+  h1 {
+    font-size: 3rem;
+    margin: 1rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
 }
 
-.start-container {
-  /*border: solid 2px blue;*/
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 65vh;
-  margin-top: 5vh;
+.htp {
+  grid-column-start: 1;
+  grid-column-end: 4;
 }
 
-.start-container h2 {
-  margin-top: 0;
-}
-
-.start-container p {
+.info {
   text-align: center;
-  max-width: 90%;
-  margin: 0;
-  font-size: small;
-  flex-grow: 1;
-  margin-bottom: 20px;
+  grid-column-start: 1;
+  grid-column-end: 4;
 }
 
-.start-container button {
-  margin-top: 3vh;
-  padding: 0.5em 0.5em;
+.sound {
+  margin: 0;
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Button styling with hover effect */
 .btn {
   text-transform: uppercase;
-  color: var(--clr-secondary-2);
+  color: var(--clr-black);
   padding: 0.375rem 0.75rem;
   width: 10vh;
   letter-spacing: var(--spacing);
   display: inline-block;
   transition: var(--transition);
   font-size: 0.875rem;
-  border: 2px solid var(--clr-secondary-2);
+  border: 2px solid var(--clr-black);
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
   margin: 0 5vh;
 }
+
 .btn:hover {
   color: var(--clr-secondary-1);
   background: transparent;
   scale: 1.2;
+}
+
+.btn-mute {
+  color: var(--clr-secondary-1);
+  border: none;
+  box-shadow: none;
+}
+
+.btn-mute:hover {
+  color: var(--clr-primary-2);
+  scale: 1.1;
+  box-shadow: none;
 }
 
 .btn-green {
@@ -134,89 +163,11 @@ p {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
   margin: 0 5vh;
+  text-decoration: none;
 }
 
 .btn-green:hover {
   color: var(--clr-secondary-4);
   background: var(--clr-primary-2);
-  scale: 1.5;
-}
-
-.hidden {
-  display: none;
-}
-
-.scoreboard h2 {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  font-size: 1.5rem;
-  color: var(--clr-secondary-1);
-  border: solid 1px green;
-}
-
-.maps {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 5px;
-  /*border: solid 1px blue;*/
-}
-
-.map {
-  flex: 1 1 calc(33.333% - 10px);
-  height: 5.4rem;
-  border-radius: var(--radius);
-  margin-bottom: 5px;
-}
-.map:hover {
   scale: 1.2;
-  opacity: 0.7;
-  transition: var(--transition);
-}
-
-.bind {
-  background: url(../images/map-bind.webp) center;
-  background-size: cover;
-}
-.haven {
-  background: url(../images/map-haven.webp) center;
-  background-size: cover;
-}
-.split {
-  background: url(../images/map-split.webp) center;
-  background-size: cover;
-}
-.ascent {
-  background: url(../images/map-ascent.webp) center;
-  background-size: cover;
-}
-.icebox {
-  background: url(../images/map-icebox.webp) center;
-  background-size: cover;
-}
-.breeze {
-  background: url(../images/map-breeze.webp) center;
-  background-size: cover;
-}
-.frature {
-  background: url(../images/map-frature.webp) center;
-  background-size: cover;
-}
-.pearl {
-  background: url(../images/map-pearl.webp) center;
-  background-size: cover;
-}
-.sunset {
-  background: url(../images/map-sunset.webp) center;
-  background-size: cover;
-}
-
-.reset-btn {
-  padding: 0.5rem 1rem;
-  width: 6rem;
-  background-color: var(--clr-primary-1);
-  color: var(--clr-secondary-1);
-  transition: var(--transition);
 }
