--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -19,9 +19,9 @@
   --ff-secondary: Montserrat, sans-serif;
   /* Commonly used CSS properties for consistency */
   --transition: all 0.3s linear;
-  --spacing: 0.25rem;
+  --spacing: 0.2rem;
   --radius: 0.5rem;
-  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --light-shadow: 0 5px 15px rgba(201, 166, 107, 0.395);
 }
 
 * {
@@ -45,7 +45,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: var(--clr-secondary-2);
+  color: var(--clr-secondary-4);
 }
 
 h1,
@@ -55,13 +55,16 @@ h2 {
   text-align: center;
   text-transform: uppercase;
 }
+
 h1 {
   font-size: 2em;
 }
+
 h2 {
   color: var(--clr-secondary-1);
   font-size: 1.5rem;
 }
+
 p {
   font-size: 0.9rem;
   color: var(--clr-white);
@@ -70,11 +73,11 @@ p {
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 80px);
-  grid-template-rows: 50px repeat(3, 80px) 30px;
+  grid-template-rows: 50px repeat(3, 80px) 40px;
   gap: 5px;
 }
 
-.turn {
+.score {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,17 +85,19 @@ p {
   font-size: 1.5rem;
 }
 
-.square {
-  opacity: 0.6;
+.maps {
+  opacity: 0.7;
   border-radius: var(--radius);
+  box-shadow: var(--light-shadow);
 }
 
-.square:hover {
+.maps:hover {
   opacity: 1;
   transition: 0.5s ease-in-out;
   box-shadow: 0 0 20px var(--clr-secondary-4);
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
+
 .button {
   display: flex;
   justify-content: center;
@@ -129,8 +134,9 @@ p {
 
 .btn {
   width: 100%;
+  padding: 0.375rem 0.75rem;
   text-transform: uppercase;
-  color: var(--clr-white);
+  color: var(--clr-secondary-4);
   background: var(--clr-primary-2);
   letter-spacing: var(--spacing);
   transition: var(--transition);
@@ -138,7 +144,9 @@ p {
   border: 2px solid var(--clr-primary-2);
   cursor: pointer;
   border-radius: var(--radius);
-  text-align: center;
+}
+.btn:hover {
+  color: var(--clr-secondary-4);
 }
 
 .btn-red {
@@ -149,9 +157,17 @@ p {
 
 .btn-red:hover {
   scale: 1.2;
+  color: var(--clr-secondary-2);
 }
 
 @media (min-width: 768px) {
+  h1 {
+    font-size: 3rem;
+    margin: 1rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
   .grid {
     width: 490px;
     display: grid;
@@ -159,11 +175,13 @@ p {
     grid-template-rows: 50px repeat(3, 150px) 60px;
     gap: 20px;
   }
-  h1 {
-    font-size: 3rem;
-    margin: 1rem;
+  .maps:hover {
+    scale: 1.15;
   }
-  h2 {
-    font-size: 2rem;
+  .btn {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
