--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
   --ff-secondary: Montserrat, sans-serif;
   /* Commonly used CSS properties for consistency */
   --transition: all 0.3s linear;
-  --spacing: 0.25rem;
+  --spacing: 0.2rem;
   --radius: 0.5rem;
   --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
@@ -45,7 +45,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: var(--clr-secondary-2);
+  color: var(--clr-secondary-4);
 }
 
 h1,
@@ -55,43 +55,30 @@ h2 {
   text-align: center;
   text-transform: uppercase;
 }
+
 h1 {
   font-size: 2em;
 }
+
 h2 {
   color: var(--clr-secondary-1);
   font-size: 1.5rem;
 }
+
 p {
   font-size: 0.9rem;
   color: var(--clr-white);
 }
 
+/* Grid container */
 .welcome-container {
   display: grid;
   grid-template-columns: repeat(3, 80px);
-  grid-template-rows: 30px 250px 30px 50px;
+  grid-template-rows: 20px 240px 30px 30px;
   gap: 5px;
 }
 
-@media (min-width: 768px) {
-  .welcome-container {
-    width: 490px;
-    display: grid;
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: 100px 300px 30px 50px;
-    gap: 15px;
-  }
-  h1 {
-    font-size: 3rem;
-    margin: 1rem;
-  }
-  h2 {
-    font-size: 2rem;
-  }
-}
-
-.htp {
+.how-to-play {
   grid-column-start: 1;
   grid-column-end: 4;
 }
@@ -102,55 +89,21 @@ p {
   grid-column-end: 4;
 }
 
-.sound {
+.button {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
-.button {
+.play {
   text-align: center;
   grid-column-start: 1;
   grid-column-end: 4;
 }
 
 /* Button styling with hover effect */
-.btn {
-  text-transform: uppercase;
-  color: var(--clr-black);
-  padding: 0.375rem 0.75rem;
-  width: 10vh;
-  letter-spacing: var(--spacing);
-  display: inline-block;
-  transition: var(--transition);
-  font-size: 0.875rem;
-  border: 2px solid var(--clr-black);
-  cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  border-radius: var(--radius);
-  margin: 0 5vh;
-}
-
-.btn:hover {
-  color: var(--clr-secondary-1);
-  background: transparent;
-  scale: 1.2;
-}
-
-.btn-mute {
-  color: var(--clr-secondary-1);
-  border: none;
-  box-shadow: none;
-}
-
-.btn-mute:hover {
-  color: var(--clr-primary-2);
-  scale: 1.1;
-  box-shadow: none;
-}
-
-.btn-green {
+.btn{
   text-transform: uppercase;
   color: var(--clr-white);
   background: var(--clr-primary-2);
@@ -167,8 +120,38 @@ p {
   text-decoration: none;
 }
 
+.btn-mute {
+  background-color: transparent;
+  color: var(--clr-secondary-1);
+  border: none;
+  box-shadow: none;
+}
+
+.btn-mute:hover {
+  color: var(--clr-primary-2);
+  scale: 1.1;
+  box-shadow: none;
+}
+
 .btn-green:hover {
   color: var(--clr-secondary-4);
   background: var(--clr-primary-2);
   scale: 1.2;
+}
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 3rem;
+    margin: 1rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  .welcome-container {
+    width: 490px;
+    display: grid;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 100px 240px 30px 50px;
+    gap: 15px;
+  }
 }
