--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -1,3 +1,4 @@
+/* Importing Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab:wght@700&display=swap");
 
 :root {
