--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Importing Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab:wght@700&display=swap");
 
 :root {
@@ -21,7 +22,7 @@
   --transition: all 0.3s linear;
   --spacing: 0.2rem;
   --radius: 0.5rem;
-  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --light-shadow: 0 5px 15px rgba(201, 166, 107, 0.395);
 }
 
 * {
