--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -71,7 +71,7 @@ p {
   color: var(--clr-white);
 }
 
-.grid {
+.map-container {
   display: grid;
   grid-template-columns: repeat(3, 80px);
   grid-template-rows: 50px repeat(3, 80px) 40px;
@@ -86,13 +86,14 @@ p {
   font-size: 1.5rem;
 }
 
-.maps {
+.map {
+  display: hidden;
   opacity: 0.7;
   border-radius: var(--radius);
   box-shadow: var(--light-shadow);
 }
 
-.maps:hover {
+.map:hover {
   opacity: 1;
   transition: 0.5s ease-in-out;
   box-shadow: 0 0 20px var(--clr-secondary-4);
@@ -146,6 +147,7 @@ p {
   cursor: pointer;
   border-radius: var(--radius);
 }
+
 .btn:hover {
   color: var(--clr-secondary-4);
 }
