--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -163,6 +163,64 @@ p {
   color: var(--clr-secondary-2);
 }
 
+.tic-tac-toe-board {
+  display: grid;
+  grid-template-columns: repeat(3, 80px);
+  grid-template-rows: 50px repeat(3, 80px) 40px;
+  gap: 5px;
+  border-radius: var(--radius);
+}
+
+.map-name {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.map-name h2 {
+  letter-spacing: var(--spacing);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--clr-secondary-1);
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+
+.cell {
+  opacity: 0.6;
+  border-radius: var(--radius);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #b8ebd0bc;
+}
+
+.back {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.cell:hover {
+  transition: 0.5s ease-in-out;
+  opacity: 1;
+  box-shadow: 0 0 20px var(--clr-secondary-3);
+}
+
+.cell img{
+  transition: var(--transition);
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: var(--radius);
+}
+
+.raze {
+  background: var(--clr-primary-1);
+}
+
+.cypher {
+  background: var(--clr-primary-2);
+}
+
 @media (min-width: 768px) {
   h1 {
     font-size: 3rem;
