Update path for image play.css

--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -124,7 +124,7 @@ p {
   background: url(../images/map-breeze.webp) center/cover no-repeat;
 }
 .map7 {
-  background: url(../images/map-frature.webp) center/cover no-repeat;
+  background: url(../images/map-fracture.webp) center/cover no-repeat;
 }
 .map8 {
   background: url(../images/map-pearl.webp) center/cover no-repeat;
