Update primary-2 color to #007e2f play.css

--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -4,7 +4,7 @@
 :root {
   /* Valorant Theme Colors */
   --clr-primary-1: #c1272d;
-  --clr-primary-2: #009b3a;
+  --clr-primary-2: #007e2f;
   --clr-secondary-1: #ffd700;
   --clr-secondary-2: #ff7f00;
   --clr-secondary-3: #c9a66b;
