--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -137,7 +137,7 @@ p {
   width: 100%;
   padding: 0.375rem 0.75rem;
   text-transform: uppercase;
-  color: var(--clr-secondary-4);
+  color: var(--clr-white);
   background: var(--clr-primary-2);
   letter-spacing: var(--spacing);
   transition: var(--transition);
