--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,25 @@ p {
   color: var(--clr-white);
 }
 
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: var(--clr-secondary-3);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  visibility: visible;
+  z-index: 999;
+  transition: var(--transition);
+}
+.hide-preloader {
+  z-index: -999;
+  visibility: hidden;
+}
+
 /* Grid container */
 .welcome-container {
   display: grid;
