--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 :root {
   /* Valorant Theme Colors */
   --clr-primary-1: #c1272d;
-  --clr-primary-2: #009b3a;
+  --clr-primary-2: #007e2f;
   --clr-secondary-1: #ffd700;
   --clr-secondary-2: #ff7f00;
   --clr-secondary-3: #c9a66b;
@@ -12,9 +12,6 @@
   /* Base Colors */
   --clr-black: #000000;
   --clr-white: #ffffff;
-  /* Gray shades */
-  --clr-grey-1: hsl(207, 11%, 20%);
-  --clr-grey-2: hsl(210, 22%, 49%);
   /* Font Family Variables */
   --ff-primary: Roboto Slab, sans-serif;
   --ff-secondary: Montserrat, sans-serif;
@@ -109,11 +106,10 @@ p {
   grid-column-end: 4;
 }
 
-.button {
+.buttons {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
 }
 
 .play {
@@ -123,7 +119,7 @@ p {
 }
 
 /* Button styling with hover effect */
-.btn{
+.btn {
   text-transform: uppercase;
   color: var(--clr-white);
   background: var(--clr-primary-2);
@@ -153,10 +149,14 @@ p {
   box-shadow: none;
 }
 
-.btn-green:hover {
+.btn-play:hover {
   color: var(--clr-secondary-4);
   background: var(--clr-primary-2);
   scale: 1.2;
+}
+
+.btn-reset {
+  width: 100%;
 }
 
 @media (min-width: 768px) {
@@ -174,4 +174,228 @@ p {
     grid-template-rows: 100px 240px 30px 50px;
     gap: 15px;
   }
+}
+
+.map-container {
+  display: grid;
+  grid-template-columns: repeat(3, 80px);
+  grid-template-rows: 50px repeat(3, 80px) 40px;
+  gap: 5px;
+}
+
+.score {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--clr-secondary-1);
+  font-size: 1.5rem;
+}
+
+.map {
+  opacity: 0.7;
+  border-radius: var(--radius);
+  box-shadow: var(--light-shadow);
+}
+
+.map:hover {
+  opacity: 1;
+  transition: 0.5s ease-in-out;
+  box-shadow: 0 0 20px var(--clr-secondary-4);
+  transform: scale(1.1);
+}
+
+.map1 {
+  background: url(../images/map-bind.webp) center/cover no-repeat;
+}
+.map2 {
+  background: url(../images/map-haven.webp) center/cover no-repeat;
+}
+.map3 {
+  background: url(../images/map-split.webp) center/cover no-repeat;
+}
+.map4 {
+  background: url(../images/map-ascent.webp) center/cover no-repeat;
+}
+.map5 {
+  background: url(../images/map-icebox.webp) center/cover no-repeat;
+}
+.map6 {
+  background: url(../images/map-breeze.webp) center/cover no-repeat;
+}
+.map7 {
+  background: url(../images/map-fracture.webp) center/cover no-repeat;
+}
+.map8 {
+  background: url(../images/map-pearl.webp) center/cover no-repeat;
+}
+.map9 {
+  background: url(../images/map-sunset.webp) center/cover no-repeat;
+}
+
+.locked-map {
+  background: black;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-2 {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  text-transform: uppercase;
+  color: var(--clr-white);
+  background: var(--clr-primary-2);
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+  font-size: 0.8rem;
+  border: 2px solid var(--clr-primary-2);
+  cursor: pointer;
+  border-radius: var(--radius);
+  text-align: center;
+  text-decoration: none;
+}
+
+.btn:hover {
+  color: var(--clr-secondary-4);
+}
+
+.btn-red {
+  color: var(--clr-white);
+  background: var(--clr-primary-1);
+  border: 2px solid var(--clr-primary-1);
+}
+
+.btn-red:hover {
+  background-color: var(--clr-primary-1);
+  color: var(--clr-secondary-2);
+}
+
+.tic-tac-toe-board {
+  display: grid;
+  grid-template-columns: repeat(3, 80px);
+  grid-template-rows: 50px repeat(3, 80px) 40px;
+  gap: 5px;
+  border-radius: var(--radius);
+}
+
+.map-name {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.map-name h2 {
+  letter-spacing: var(--spacing);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--clr-secondary-1);
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+
+.cell {
+  opacity: 0.6;
+  border-radius: var(--radius);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #b8ebd0bc;
+}
+
+.cell:hover {
+  transition: 0.5s ease-in-out;
+  opacity: 1;
+  box-shadow: 0 0 20px var(--clr-secondary-3);
+}
+
+.cell img{
+  transition: var(--transition);
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: var(--radius);
+}
+
+.locked-cell {
+  background-color: black;
+  pointer-events: none;
+  transition: var(--transition);
+}
+
+.back {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.raze-win {
+  color: var(--clr-primary-1);
+}
+
+.cypher-win {
+  color: var(--clr-primary-2);
+}
+
+.raze {
+  background: var(--clr-primary-1);
+}
+
+.cypher {
+  background: var(--clr-primary-2);
+}
+
+.cell-raze-turn {
+  background-color: var(--clr-primary-1);
+}
+
+.cell-cypher-turn {
+  background-color: var(--clr-primary-2);
+}
+
+.raze-glow {
+  box-shadow: 0 0 20px 10px var(--clr-primary-1);
+}
+
+.cypher-glow {
+  box-shadow: 0 0 20px 10px var(--clr-primary-2);
+}
+
+.raze-glow:hover {
+  background: linear-gradient(rgba(255, 0, 0, 0.221), rgba(255, 0, 0, 0.221)), url(../images/agent-raze.webp) center/cover no-repeat;
+  transition: var(--transition);
+}
+.cypher-glow:hover {
+  background: linear-gradient(rgba(0, 225, 0, 0.221), rgba(0, 225, 0, 0.221)), url(../images/agent-cypher.webp) center/cover no-repeat;
+  transition: var(--transition);
+}
+
+@media (min-width: 768px) {
+  .map-container {
+    width: 490px;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 50px repeat(3, 150px) 60px;
+    gap: 20px;
+  }
+  .map:hover {
+    scale: 1.15;
+  }
+  .btn-2 {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .tic-tac-toe-board {
+    width: 490px;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 50px repeat(3, 150px) 60px;
+    gap: 20px;
+    border-radius: var(--radius);
+  }
+}
+
+/* Hides the board */
+.hidden {
+  display: none;
 }
