--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@ p {
 }
 
 .btn-mute:hover {
+  background-color: transparent;
   color: var(--clr-primary-2);
   border: none;
   box-shadow: none;
