Update .btn-reset bg and color style.css
bg: black to white
color: yellow to white

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,8 +268,8 @@ p {
 
 .btn-reset {
   width: 100%;
-  background-color: var(--clr-secondary-1);
-  color: var(--clr-black);
+  background-color: var(--clr-primary-2);
+  color: var(--clr-white);
   border: var(--clr-secondary-1);
 }
 
