--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,6 +412,19 @@ p {
   pointer-events: none;
 }
 
+.tie {
+  background: rgba(0, 0, 0, 0.221);
+}
+
+.cypher-ability {
+  background: linear-gradient(rgba(0, 225, 0, 0.221), rgba(0, 225, 0, 0.221)) ,url(../images/ability-spycam.webp) center/cover no-repeat;
+  box-shadow: none;
+}
+
+.raze-ability {
+  background: linear-gradient(rgba(255, 0, 0, 0.221), rgba(255, 0, 0, 0.221)), url(../images/ability-paint-shells.webp) center/cover no-repeat;
+  box-shadow: none;
+}
 /* Hides the board */
 .hidden {
   display: none;
