Add box-shadow to .cell style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,6 +302,7 @@ p {
   align-items: center;
   justify-content: center;
   background-color: #b8ebd0bc;
+  box-shadow: var(--light-shadow);
 }
 
 .cell:hover {
