--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Importing Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab:wght@700&display=swap");
-
+/* Root Variables */
 :root {
   /* Valorant Theme Colors */
   --clr-primary-1: #c1272d;
@@ -22,6 +22,7 @@
   --light-shadow: 0 5px 15px rgba(201, 166, 107, 0.395);
 }
 
+/* Global Styles */
 * {
   padding: 0;
   margin: 0;
@@ -46,6 +47,7 @@ body {
   color: var(--clr-secondary-4);
 }
 
+/* Typography */
 h1,
 h2 {
   color: var(--clr-secondary-2);
@@ -68,6 +70,7 @@ p {
   color: var(--clr-white);
 }
 
+/* Preloader */
 .preloader {
   position: fixed;
   top: 0;
@@ -87,7 +90,7 @@ p {
   visibility: hidden;
 }
 
-/* Grid container */
+/* Container for index.html */
 .welcome-container {
   display: grid;
   grid-template-columns: repeat(3, 80px);
@@ -118,50 +121,7 @@ p {
   grid-column-end: 4;
 }
 
-/* Button styling with hover effect */
-.btn {
-  text-transform: uppercase;
-  color: var(--clr-white);
-  background: var(--clr-primary-2);
-  padding: 0.375rem 0.75rem;
-  letter-spacing: var(--spacing);
-  display: inline-block;
-  transition: var(--transition);
-  font-size: 0.875rem;
-  border: 2px solid var(--clr-primary-2);
-  cursor: pointer;
-  border-radius: var(--radius);
-  margin: 0 5vh;
-  text-decoration: none;
-}
-
-.btn:hover {
-  color: var(--clr-white);
-}
-
-.btn-play:hover {
-  color: var(--clr-secondary-4);
-  background: var(--clr-primary-2);
-  scale: 1.2;
-}
-
-@media (min-width: 768px) {
-  h1 {
-    font-size: 3rem;
-    margin: 1rem;
-  }
-  h2 {
-    font-size: 2rem;
-  }
-  .welcome-container {
-    width: 490px;
-    display: grid;
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: 100px 240px 30px 50px;
-    gap: 15px;
-  }
-}
-
+/* Container for play.html */
 .map-container {
   display: grid;
   grid-template-columns: repeat(3, 80px);
@@ -190,38 +150,37 @@ p {
   transform: scale(1.1);
 }
 
-.map1 {
-  background: url(../images/map-bind.webp) center/cover no-repeat;
-}
-.map2 {
-  background: url(../images/map-haven.webp) center/cover no-repeat;
-}
-.map3 {
-  background: url(../images/map-split.webp) center/cover no-repeat;
-}
-.map4 {
-  background: url(../images/map-ascent.webp) center/cover no-repeat;
-}
-.map5 {
-  background: url(../images/map-icebox.webp) center/cover no-repeat;
-}
-.map6 {
-  background: url(../images/map-breeze.webp) center/cover no-repeat;
-}
-.map7 {
-  background: url(../images/map-fracture.webp) center/cover no-repeat;
-}
-.map8 {
-  background: url(../images/map-pearl.webp) center/cover no-repeat;
-}
-.map9 {
-  background: url(../images/map-sunset.webp) center/cover no-repeat;
-}
-
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/* Button styling with hover effect */
+.btn {
+  text-transform: uppercase;
+  color: var(--clr-white);
+  background: var(--clr-primary-2);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid var(--clr-primary-2);
+  cursor: pointer;
+  border-radius: var(--radius);
+  margin: 0 5vh;
+  text-decoration: none;
+}
+
+.btn:hover {
+  color: var(--clr-white);
+}
+
+.btn-play:hover {
+  color: var(--clr-secondary-4);
+  background: var(--clr-primary-2);
+  scale: 1.2;
 }
 
 .btn-2 {
@@ -272,6 +231,36 @@ p {
   background-color: transparent;
 }
 
+/* Map Backgrounds */
+.map1 {
+  background: url(../images/map-bind.webp) center/cover no-repeat;
+}
+.map2 {
+  background: url(../images/map-haven.webp) center/cover no-repeat;
+}
+.map3 {
+  background: url(../images/map-split.webp) center/cover no-repeat;
+}
+.map4 {
+  background: url(../images/map-ascent.webp) center/cover no-repeat;
+}
+.map5 {
+  background: url(../images/map-icebox.webp) center/cover no-repeat;
+}
+.map6 {
+  background: url(../images/map-breeze.webp) center/cover no-repeat;
+}
+.map7 {
+  background: url(../images/map-fracture.webp) center/cover no-repeat;
+}
+.map8 {
+  background: url(../images/map-pearl.webp) center/cover no-repeat;
+}
+.map9 {
+  background: url(../images/map-sunset.webp) center/cover no-repeat;
+}
+
+/* Container for miniboard */
 .tic-tac-toe-board {
   display: grid;
   grid-template-columns: repeat(3, 80px);
@@ -323,6 +312,63 @@ p {
   grid-column-end: 4;
 }
 
+.raze-glow:hover {
+  background: linear-gradient(rgba(255, 0, 0, 0.221), rgba(255, 0, 0, 0.221)), url(../images/agent-raze.webp) center/cover no-repeat;
+  transition: var(--transition);
+  box-shadow: 0 0 20px 10px var(--clr-primary-1);
+}
+.cypher-glow:hover {
+  background: linear-gradient(rgba(0, 225, 0, 0.221), rgba(0, 225, 0, 0.221)), url(../images/agent-cypher.webp) center/cover no-repeat;
+  transition: var(--transition);
+  box-shadow: 0 0 20px 10px var(--clr-primary-2);
+}
+
+/* Media Queries index.html */
+@media (min-width: 768px) {
+  h1 {
+    font-size: 3rem;
+    margin: 1rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  .welcome-container {
+    width: 490px;
+    display: grid;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 100px 240px 30px 50px;
+    gap: 15px;
+  }
+}
+/* Media Queries play.html */
+@media (min-width: 768px) {
+  .map-container {
+    width: 490px;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 50px repeat(3, 150px) 60px;
+    gap: 20px;
+  }
+  .map:hover {
+    scale: 1.15;
+  }
+  .btn-2 {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .btn-mute {
+    box-shadow: none;
+  }
+  .tic-tac-toe-board {
+    width: 490px;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 50px repeat(3, 150px) 60px;
+    gap: 20px;
+    border-radius: var(--radius);
+  }
+}
+/* Style after win/game ends */
 .raze-win {
   color: var(--clr-primary-1);
 }
@@ -356,45 +402,17 @@ p {
   background: linear-gradient(rgba(0, 225, 0, 0.221), rgba(0, 225, 0, 0.221)), url(../images/agent-cypher.webp) center/cover no-repeat;
 }
 
-.raze-glow:hover {
-  background: linear-gradient(rgba(255, 0, 0, 0.221), rgba(255, 0, 0, 0.221)), url(../images/agent-raze.webp) center/cover no-repeat;
-  transition: var(--transition);
-  box-shadow: 0 0 20px 10px var(--clr-primary-1);
-}
-.cypher-glow:hover {
-  background: linear-gradient(rgba(0, 225, 0, 0.221), rgba(0, 225, 0, 0.221)), url(../images/agent-cypher.webp) center/cover no-repeat;
-  transition: var(--transition);
-  box-shadow: 0 0 20px 10px var(--clr-primary-2);
+.cypher-ability {
+  background: linear-gradient(rgba(0, 225, 0, 0.221), rgba(0, 225, 0, 0.221)) ,url(../images/ability-spycam.webp) center/cover no-repeat;
+  box-shadow: none;
 }
 
-@media (min-width: 768px) {
-  .map-container {
-    width: 490px;
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: 50px repeat(3, 150px) 60px;
-    gap: 20px;
-  }
-  .map:hover {
-    scale: 1.15;
-  }
-  .btn-2 {
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .btn-mute {
-    box-shadow: none;
-  }
-  .tic-tac-toe-board {
-    width: 490px;
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: 50px repeat(3, 150px) 60px;
-    gap: 20px;
-    border-radius: var(--radius);
-  }
+.raze-ability {
+  background: linear-gradient(rgba(255, 0, 0, 0.221), rgba(255, 0, 0, 0.221)), url(../images/ability-paint-shells.webp) center/cover no-repeat;
+  box-shadow: none;
 }
 
+/* Style for locked classes */
 .locked-map {
   background: rgba(0, 0, 0, 0.221);
 }
@@ -413,19 +431,11 @@ p {
   pointer-events: none;
 }
 
+/* Style for tie */
 .tie {
   background: rgba(0, 0, 0, 0.221);
 }
 
-.cypher-ability {
-  background: linear-gradient(rgba(0, 225, 0, 0.221), rgba(0, 225, 0, 0.221)) ,url(../images/ability-spycam.webp) center/cover no-repeat;
-  box-shadow: none;
-}
-
-.raze-ability {
-  background: linear-gradient(rgba(255, 0, 0, 0.221), rgba(255, 0, 0, 0.221)), url(../images/ability-paint-shells.webp) center/cover no-repeat;
-  box-shadow: none;
-}
 /* Hides the board */
 .hidden {
   display: none;
