--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,6 +431,29 @@ p {
   pointer-events: none;
 }
 
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  gap: 0.5rem;
+  color: white;
+}
+
+.icon {
+  color: var(--clr-black);
+  font-size: 1.5rem;
+  margin: 0.5rem;
+}
+
 /* Style for tie */
 .tie {
   background: rgba(0, 0, 0, 0.221);
