--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,18 @@ p {
   border-radius: var(--radius);
 }
 
+#player-icon {
+  font-size: 1.5rem;
+  height: 3rem;
+  border-radius: var(--radius);
+}
+
+.player-turn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .back {
   grid-column-start: 1;
   grid-column-end: 4;
